Reduce information and links in A+ Support page
In EDIT meeting it was decided that the Support page
should focus on just the most relevant A+ support information.

--- a/assets/sass/components/_frontpage-cards.scss
+++ b/assets/sass/components/_frontpage-cards.scss
@@ -66,6 +66,20 @@
 			@include focus-with-outline-only;
 		}
 	}
+	.widecard {
+		display: flex;
+		flex-direction: column;
+		width: 47%;
+		border: solid 1px #ccc;
+		border-radius: 4px;
+		margin: 8px;
+		margin-bottom: 20px;
+		padding: 4px;
+
+		@media (max-width: $grid-float-breakpoint-max) {
+			width: 100%;
+		}
+	}
 	.advert-card {
 		position: relative;
 		background-color: #d9edf7;
