Fix the LTI parameter list displayed in the LTI launch view
The LTI parameters are supposed to be shown in the LTI launch view
when the user clicks the "Show details" button.
However, the parameters had gone missing.

The issue was caused by Django's dictsort template filter.
Its behaviour changed slightly in the Django patch 2.2.26.
Perhaps, the A+ LTI launch view has been missing the parameters
since then.

https://docs.djangoproject.com/en/3.2/ref/templates/builtins/#std-templatefilter-dictsort

Fixes #1049

--- a/external_services/templates/external_services/_launch.html
+++ b/external_services/templates/external_services/_launch.html
@@ -67,7 +67,7 @@ E.g. {% static 'js/external_launcher.js' ‰}
 			<div class="collapse well" id="extserv-more-{{ form_id }}">
 				<p>{{ service.method }} {{ url }}</p>
 				<table class="card card-block table">
-					{% for name, value in parameters|dictsort:"0.lower" %}
+					{% for name, value in parameters|dictsort:0 %}
 						<tr><th>{{ name }}</th><td>{{ value }}</td></tr>
 					{% endfor %}
 				</table>
