--- a/course/templates/course/_course_cards.html
+++ b/course/templates/course/_course_cards.html
@@ -26,7 +26,7 @@
 					</p>
 					<p class="card-text">
 						{{ instance.course.code }}
-						{% if not instance.visible_to_students and not condensed %}
+						{% if not instance.visible_to_students %}
    							<span class="label label-danger">{% translate "HIDDEN_FROM_STUDENTS" %}</span>
 						{% endif %}
 						<br />
