Show metadata in the submission inspect view
Add submission metadata to the submission details modal dialogue
in the submission inspect page.

Fixes #614

--- a/exercise/templates/exercise/staff/_submission_data_modal.html
+++ b/exercise/templates/exercise/staff/_submission_data_modal.html
@@ -32,6 +32,16 @@
 					<dt>{% translate "NO_VALUES" %}</dt>
 					{% endfor %}
 				</dl>
+
+				<h4>{% translate "LABEL_META_DATA"|capfirst %}</h4>
+				<dl>
+					{% for key, value in submission.meta_data.items %}
+						<dt>{{ key }}</dt>
+						<dd>{{ value }}</dd>
+					{% empty %}
+						<dt>{% translate "NO_VALUES" %}</dt>
+					{% endfor %}
+				</dl>
 			</div>
 		</div>
 	</div>
