Fix approve late submission by module
Fix _late_submission_approval_modal.html sending the user profile ID and not
the user ID which leads to SubmissionApprovalByModuleView trying to approve
submissions of a different user.

Fixes #1086

--- a/exercise/templates/exercise/staff/_late_submission_approval_modal.html
+++ b/exercise/templates/exercise/staff/_late_submission_approval_modal.html
@@ -35,7 +35,7 @@
 					style="display: none"
 				>
 					{% csrf_token %}
-					<input type="hidden" name="user_id" value="{{ submitter.id }}">
+					<input type="hidden" name="user_id" value="{{ submitter.user.id }}">
 					<input type="hidden" name="submission_id" value="{{ submission.id }}">
 					<p>{% translate 'SUBMISSION_APPROVAL_APPROVE_MULTIPLE_SELECT_SCOPE' %}</p>
 					<label>
