--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -151,7 +151,7 @@
 							open it due to personal extensions. However, this saves some database queries.
 							{% endcomment %}
 							{% if exercise.model_answers %}
-								<a class="aplus-button--secondary aplus-button--xs page-modal" role="button" href="{{ exercise|url:'exercise-model' }}">
+								<a class="aplus-button--secondary aplus-button--md page-modal" role="button" href="{{ exercise|url:'exercise-model' }}">
 									<span class="glyphicon glyphicon-file" aria-hidden="true"></span>
 									{% translate "SHOW_MODEL_ANSWER" %}
 								</a>
@@ -159,14 +159,14 @@
 						{% endif %}
 						{% if is_course_staff or is_student %}
 							{% if exercise.templates %}
-								<a class="aplus-button--secondary aplus-button--xs page-modal" role="button" href="{{ exercise|url:'exercise-template' }}">
+								<a class="aplus-button--secondary aplus-button--md page-modal" role="button" href="{{ exercise|url:'exercise-template' }}">
 									<span class="glyphicon glyphicon-file" aria-hidden="true"></span>
 									{% translate "SHOW_EXERCISE_TEMPLATE" %}
 								</a>
 							{% endif %}
 						{% endif %}
 						{% if is_course_staff %}
-							<a class="aplus-button--secondary aplus-button--xs page-modal" role="button" href="{{ exercise|url:'submission-list' }}">
+							<a class="aplus-button--secondary aplus-button--md page-modal" role="button" href="{{ exercise|url:'submission-list' }}">
 								<span class="glyphicon glyphicon-list" aria-hidden="true"></span>
 								{% translate "VIEW_ALL_SUBMISSIONS" %}
 							</a>
