--- a/templates/403.html
+++ b/templates/403.html
@@ -1,34 +1,12 @@
+{% extends "base.html" %}
 {% load i18n %}
 {% load static %}
 {% load base %}
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>403 Forbidden</title>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'css/main.css' %}" />
-    </head>
-    <body>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="page-header">
-                        <h1>403 Forbidden</h1>
-                    </div>
-                    {% include "_messages.html" %}
-                    <pre>
-   |        v
-   |   /\   |   ,.
-   ^\_("))_/| ´  .
-     /{%} \ |   `
-    /______\  ,'
- ,'  ^   ^  ,'
-;          :</pre>
-                </div>
+{% block content %}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-8">
             </div>
         </div>
-        {% tracking_html %}
-    </body>
-</html>
+    </div>
+{% endblock %}
