Add LTI Tool v1.3 feature
A+ may be used as an external tool from LTI platforms such as
Moodle.

There are some unfinished parts left in this feature, for example,
the LTI grading service is missing for Acos server assignments
and other assignment services that create new, graded submissions
by sending the submission data via the assignment service in the end
of the student's workflow.

The discussion in the pull request contains more items to be fixed
later.
https://github.com/apluslms/a-plus/pull/1104

Mikko and Eerik implemented small parts of the feature.
Markus did most of the work in this commit.

Co-authored-by: Murhu Mikko <mikko.murhu@aalto.fi>
Co-authored-by: Saksi Eerik <saksi.eerik@gmail.com>

--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -42,7 +42,7 @@
 	{% if exercise.is_submittable %}
 	<ul class="nav nav-tabs">
 			<li class="menu-exercise">
-					<a href="{{ current.link }}">
+					<a href="{{ exercise|url:exercise_url_name }}">
 							{% translate "EXERCISE_DESCRIPTION" %}
 					</a>
 			</li>
@@ -56,7 +56,7 @@
 					<ul class="dropdown-menu">
 							{% for submission in submissions %}
 							<li>
-									<a href="{{ submission|url }}" data-hash="{{ submission.meta_data.hash }}">
+									<a href="{{ submission|url:submission_url_name }}" data-hash="{{ submission.meta_data.hash }}">
 											{{ forloop.revcounter }}.
 											{{ submission.submission_time|date:'DATETIME_SECONDS_FORMAT' }}
 											{% points_badge submission is_revealed=feedback_revealed %}
