--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -32,6 +32,7 @@
 
 {% block content %}
 <div data-taggings="{{ get_taggings|join:' ' }}" class="row">
+	{% block course_sidebar %}
 	<button
 		class="hidden hidden-xs course-sidebar-expander"
 		title="{% translate 'OPEN_SIDEBAR' %}"
@@ -72,6 +73,7 @@
 		</div>
 		{% endcomment %}
 	</div>
+	{% endblock course_sidebar %}
 	<div class="col-sm-10" id="course-content">
 		{% if instance.is_past and instance.has_enrollment_closed %}
 			<div class="alert sticky-alert alert-default">
