--- a/edit_course/templates/edit_course/edit_content.html
+++ b/edit_course/templates/edit_course/edit_content.html
@@ -14,11 +14,15 @@
   <form method="post" class="form-inline" action="{{ instance|url:'course-configure' }}">
     {% csrf_token %}
     <div class="form-group">
-      <label class="control-label" for="id_url">{% translate "IMPORT_AND_OVERRIDE_CONTENT_CONFIG_URL" %}</label>
-      <input type="text" class="form-control" id="id_url" name="url" value="{{ instance.configure_url }}">
+      <label class="control-label" for="id_url">{% translate "IMPORT_CONTENT_CONFIG_URL" %}</label>
+      <input type="text" size="60" class="form-control" id="id_url" name="url" value="{{ instance.configure_url }}">
     </div>
-    <button class="aplus-button--default aplus-button--md" type="submit" name="apply">{% translate "APPLY" %}</button>
-    <button class="aplus-button--secondary aplus-button--md" type="submit" name="cache">{% translate "CLEAR_CONTENT_CACHE" %}</button>
+    <button class="aplus-button--default aplus-button--md" type="submit" name="apply"
+			data-toggle="tooltip" title="{% translate 'APPLY_CHANGES_TOOLTIP' %}">{% translate "APPLY_CHANGES" %}</button>
+    <button class="aplus-button--secondary aplus-button--md" type="submit" name="reset"
+			data-toggle="tooltip" title="{% translate 'OVERRIDE_COURSE_CONFIGURATION_TOOLTIP' %}">{% translate "OVERRIDE" %}</button>
+    <button class="aplus-button--secondary aplus-button--md" type="submit" name="cache"
+			data-toggle="tooltip" title="{% translate 'CLEAR_CONTENT_CACHE_TOOLTIP' %}">{% translate "CLEAR_CONTENT_CACHE" %}</button>
   </form>
   {% if instance.build_log_url %}
   <a class="aplus-button--secondary aplus-button--md page-modal" href="{{ instance|url:'course-build-log' }}" role="button">
