Add separate vertical scroll bar to exercise submission inspect
Fixes #1111

--- a/exercise/templates/exercise/staff/_assessment_panel.html
+++ b/exercise/templates/exercise/staff/_assessment_panel.html
@@ -104,7 +104,7 @@
 					{% endfor %}
 				</ul>
 
-				<div class="tab-content">
+				<div class="tab-content submission-container">
 					{% for file in files %}
 					<div
 						id="file-{{ file.id }}"
