--- a/assets/sass/pages/_assessment.scss
+++ b/assets/sass/pages/_assessment.scss
@@ -1,3 +1,5 @@
+@import "../mixins/sticky_submission_scroll";
+
 .assessment-panel {
 	& > .panel-heading {
 		position: sticky;
@@ -42,20 +44,21 @@
 		padding-bottom: 0;
 	}
 
+	.submission-container {
+		--sticky-top: 0;
+		flex-grow: 1;
+		.submitted-file.sticky > div {
+			@include sticky-submission-scroll;
+		}
+	}
+
 	.grader-container {
 		--sticky-top: 0;
 		flex-grow: 1;
 		.grader-tab.sticky {
-			// The assessment bar can change its size because of the resizable
-			// textarea, but the stickied grader feedback should never be obscured
-			// by it. Hence the --sticky-top variable, which is updated in
-			// Javascript with a ResizeObserver.
-			position: sticky;
-			top: calc(5px + var(--sticky-top, 0));
-			& > div {
-				max-height: calc(100vh - var(--sticky-top, 0));
-				display: flex;
-				flex-direction: column;
+			@include sticky-submission-scroll;
+			.grader-html-output {
+				overflow: scroll;
 			}
 		}
 	}
