--- a/exercise/templates/exercise/_exercise_wait.html
+++ b/exercise/templates/exercise/_exercise_wait.html
@@ -2,14 +2,16 @@
 {% load course %}
 {% if page.is_wait %}
 {% with ready_url_name=submission_poll_ready_url_name|default:'submission' %}
-<div class="exercise-wait hide progress"
-  data-poll-url="{{ submission|url:'submission-poll' }}"
-  data-ready-url="{{ submission|url:ready_url_name }}"
-  data-msg-error="{% translate 'EXERCISE_ERROR_COMMUNICATION' %}"
-  data-msg-timeout="{% translate 'EXERCISE_ERROR_GRADING_TIMEOUT' %}">
-  <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%;">
-    {% translate "GRADING_SUBMISSION" %}
-  </div>
+<div
+	class="exercise-wait hide progress"
+	data-poll-url="{{ submission|url:'submission-poll' }}"
+	data-ready-url="{{ submission|url:ready_url_name }}"
+	data-msg-error="{% translate 'EXERCISE_ERROR_COMMUNICATION' %}"
+	data-msg-timeout="{% translate 'EXERCISE_ERROR_GRADING_TIMEOUT' %}"
+>
+	<div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%;">
+		{% translate "GRADING_SUBMISSION" %}
+	</div>
 </div>
 {% endwith %}
 {% endif %}
