--- a/templates/base.html
+++ b/templates/base.html
@@ -249,6 +249,9 @@
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 				<div class="modal-progress">
+					<div class="modal-submit-error alert alert-danger" style="display:none">
+						{% translate "EXERCISE_ERROR_COMMUNICATION" %}
+					</div>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%"
 							data-msg-error="{% translate 'LOADING_FAILED' %}">
