Fix ae submissions when alerts are present
Danger alerts overrode the output and caused the submission to be
skipped. Fixes #487.

--- a/templates/_messages.html
+++ b/templates/_messages.html
@@ -1,8 +1,10 @@
 {% if messages %}
-    {% for message in messages %}
-        <div class="alert alert-{% if message.level == 10 %}success{% elif message.level == 40 %}danger{% else %}{{ message.tags }}{% endif %} clearfix site-message" role="alert">
-            <span class="glyphicon glyphicon-{% if message.level == 25 %}check{% else %}warning-sign{% endif %}" aria-hidden="true"></span>
-            <div class="message">{{ message|safe }}</div>
-        </div>
-    {% endfor %}
+	<div class="site-messages">
+		{% for message in messages %}
+			<div class="alert alert-{% if message.level == 10 %}success{% elif message.level == 40 %}danger{% else %}{{ message.tags }}{% endif %} clearfix site-message" role="alert">
+				<span class="glyphicon glyphicon-{% if message.level == 25 %}check{% else %}warning-sign{% endif %}" aria-hidden="true"></span>
+				<div class="message">{{ message|safe }}</div>
+			</div>
+		{% endfor %}
+	</div>
 {% endif %}
