Inline questionnaire question titles with required asterisk
Fixes apluslms/mooc-grader#142

--- a/assets/sass/protocols/_quiz1.scss
+++ b/assets/sass/protocols/_quiz1.scss
@@ -12,6 +12,10 @@ $questionnaire-focus-bg: #bce8f1;
 		margin-bottom: 20px;
 	}
 
+	.question-area > label:first-of-type {
+		display: inline;
+	}
+
 	.question-description {
 		margin-bottom: 5px;
 	}
