Add assessed submitters ratio to submissions table
Add counter of manually assessed submitters, showing the number of
submitters that have been assessed, remaining, and the percentage.

Fixes #1109

--- a/exercise/templates/exercise/staff/_submissions_table.html
+++ b/exercise/templates/exercise/staff/_submissions_table.html
@@ -59,7 +59,7 @@
 <table class="table table-bordered{% if all or count < default_limit %} filtered-table ordered-table{% endif %}">
 		<thead>
 				<tr>
-						<th>{% translate "SUBMITTERS" %}</th>
+						<th>{% translate "SUBMITTERS" %} {{percentage_graded}} {% translate "GRADED" %}</th>
 						<th>{% translate "TIME" %}</th>
 						<th>{% translate "STATUS" %}</th>
 						<th>{% translate "GRADE" %}</th>
