Upgrade from Django 3.2 to 4.2
This commit upgrades Django from version 3.2 to 4.2.
The package versions for djangorestframework, django-essentials,
django-colortag, and django-html5-colorfield have been updated too.

Part of #1171

--- a/exercise/templates/exercise/submission_plain.html
+++ b/exercise/templates/exercise/submission_plain.html
@@ -29,7 +29,8 @@
 		</p>
 		<table class="submission-info table table-bordered table-condensed">
 			<tr>
-				{% if not request.is_ajax %}
+				{% is_ajax as is_ajax_result %}
+				{% if not is_ajax_result %}
 				<th rowspan="2">
 					<a href="{{ submission.exercise|url:'exercise-plain' }}" class="aplus-button--secondary aplus-button--md" role="button">
 						{% translate "RETURN_TO_EXERCISE" %}
