Only include visible exercises in point totals
Earlier UI included points from hidden exercises and modules too.

--- a/exercise/templates/exercise/_children.html
+++ b/exercise/templates/exercise/_children.html
@@ -8,7 +8,7 @@
 		{% elif entry.up %}
 			</ul>
 		{% endif %}
-	{% elif entry|is_listed %}
+	{% elif entry.is_listed %}
 		<li>
 		{% if accessible and not entry.submittable and entry.is_revealed or exercise_accessible and entry.is_revealed %}
 			{% if entry.is_empty %}
